plugins {
    id 'com.github.teruteru128.study.java-application-conventions'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

compileJava {
    options.fork = true
    options.forkOptions.setMemoryInitialSize('16G')
    options.forkOptions.setMemoryMaximumSize('16G')
    options.compilerArgs += [
            // '--enable-preview'
            //, '-Xlint:preview'
    ]
}

application {
    mainModule = 'com.github.teruteru.foreign'
    mainClass = 'com.github.teruteru128.foreign.Main'
    applicationDefaultJvmArgs = [
            '--enable-preview',
            '--enable-native-access=com.github.teruteru.foreign,com.github.teruteru.foreign.opencl,com.github.teruteru.foreign.setjmp,com.github.teruteru.foreign.windows',
            '-Xms64G',
            '-Xmx64G',
            //'-Djextract.trace.downcalls=true'
    ]
}

dependencies {
    implementation project(":opencl")
    implementation project(":setjmp")
    implementation project(":windows")
}
